--- a/package.json
+++ b/package.json
@@ -379,10 +379,11 @@
     "build:packages": "wsrun --fast-exit --exclude-missing --report -c build",
     "check": "yarn check:ts && yarn lint --quiet",
     "check:js": "tsc --checkJs -p tsconfig.json",
-    "check:ts": "tsc -p tsconfig.json",
-    "check:ts:watch": "tsc --watch -p tsconfig.json",
+    "check:ts": "yarn tsc -p tsconfig.json",
+    "check:ts:watch": "yarn tsc --watch -p tsconfig.json",
     "check:biome": "yarn biome ci --since=HEAD^ --changed",
-    "graphql:codegen": "yarn graphql-codegen --config ui/codegen.ts",
+    "graphql:codegen": "node --require ./config/node/setup-graceful-fs.cjs ./node_modules/.bin/graphql-codegen --config ui/codegen.ts",
+    "generate:bundle-extensions": "node ui-build/webpack/generatePluginExtensions.js",
     "serve": "gulp rev 1> /dev/null & NODE_ENV=development rspack serve",
     "lint:packages": "eslint packages --cache --concurrency=auto",
     "lint:staged": "lint-staged",
@@ -394,6 +395,8 @@
     "postinstall": "yarn dedupe-yarn; patch-package; [ -f ./script/install_hooks ] && ./script/install_hooks || true",
     "webpack:analyze": "SKIP_SOURCEMAPS=1 WEBPACK_PEDANTIC=0 rspack --analyze",
     "webpack": "gulp rev 1> /dev/null && NODE_ENV=development rspack --watch=true & yarn graphql:codegen --watch",
+    "pretsc": "yarn run generate:bundle-extensions && yarn run graphql:codegen",
+    "tsc": "node_modules/.bin/tsc",
     "webpack-development": "NODE_ENV=development rspack build",
     "webpack-production": "NODE_ENV=production rspack build",
     "jspec": "./spec/jspec.sh",
