Wrap jest to avoid EMFILE crashes

--- a/package.json
+++ b/package.json
@@ -356,17 +356,16 @@
   "browserslist": ["extends @instructure/browserslist-config-canvas-lms"],
   "repository": "instructure/canvas-lms",
   "scripts": {
-    "test": "jest --color",
+    "test": "node ./script/run-jest.js --color",
     "test:coverage": "script/generate_js_coverage",
-    "test:watch": "jest --watch .",
+    "test:watch": "node ./script/run-jest.js --watch .",
     "test:vitest": "vitest run --color",
     "test:vitest:watch": "vitest watch --color",
     "test:vitest:coverage": "vitest run --color --coverage",
-    "test:jest": "jest --color",
-    "test:jest:coverage": "NODE_OPTIONS=\"--openssl-legacy-provider --max_old_space_size=5120\" jest --color --coverage --testTimeout=30000",
-    "test:jest:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js",
-    "test:jest:watch": "jest --color --watch",
-    "test:jest:build": "if [ \"$COVERAGE\" = \"1\" ]; then yarn test:jest:coverage --maxWorkers=5 --shard=$CI_NODE_INDEX/$CI_NODE_TOTAL; else yarn test:jest --maxWorkers=5 --shard=$CI_NODE_INDEX/$CI_NODE_TOTAL; fi",
+    "test:jest": "node ./script/run-jest.js --color",
+    "test:jest:coverage": "NODE_OPTIONS=\"--openssl-legacy-provider --max_old_space_size=5120\" node ./script/run-jest.js --color --coverage --testTimeout=30000",
+    "test:jest:debug": "node --inspect-brk=0.0.0.0 ./script/run-jest.js",
+    "test:jest:watch": "node ./script/run-jest.js --color --watch",
     "test:jest:log": "LOG_PLAYGROUND_URL_ON_FAILURE=true yarn test:jest",
     "test:packages": "wsrun --report -m -l -s -c test",
     "build": "yarn run graphql:codegen && yarn run build:css && yarn run build:packages && yarn run build:js",
